<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lanya_lingyang_5.MainActivity" >
 <!--  <RelativeLayout
        android:id="@+id/oder_nofound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        android:orientation="vertical"
         >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/lanya" />
        
         <Button
               
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:visibility="invisible"
                android:text="@string/menu_disconnect" />
         </RelativeLayout> -->
           <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/blue"
   
     >
    
        <RelativeLayout
        android:id="@+id/top_fanhui"
        android:layout_width="60dp"
        android:layout_height="68dp"
      
        android:layout_alignParentLeft="true" >

        <ImageView
            android:id="@+id/shezhi_peizhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
           
            android:layout_marginLeft="20dp"
            android:background="@drawable/yanzhengfanhui" />

    </RelativeLayout>
    
        
        
        <TextView
        android:id="@android:id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="蓝牙"
        android:textSize="@dimen/ts_size"
        
        />
        
        <Button
                android:id="@+id/lian"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:textColor="@color/white"
                android:layout_marginLeft="60dp"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                android:text="@string/menu_disconnect" />
        
        
         <Button
                android:id="@+id/sao"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/saomiao" />

      </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/but_color"
        android:visibility="gone"
        android:orientation="vertical" >

        <LinearLayout
           
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_weight="6"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/can_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/can_1"
                    android:textColor="@color/but_color"
                    android:textSize="35px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/can_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/can_2"
                    android:textColor="@color/but_color"
                    android:textSize="35px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/can_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/can_3"
                    android:textColor="@color/but_color"
                    android:textSize="35px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/can_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/remote"
                    android:textColor="@color/but_color"
                    android:textSize="35px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="horizontal" >
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/can_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/xun"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/can_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/ming"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                     
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >
                  <Button
                        android:id="@+id/can_110"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/noming"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                    
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="horizontal" >
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/can_17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/xiumian"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                </LinearLayout>
                
                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >
                      <Button
                        android:id="@+id/can_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/huan"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                     
                </LinearLayout>
            </LinearLayout>
            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/can_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/can_5"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/can_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_green"
                        android:text="@string/can_6"
                        android:textColor="@color/but_color"
                        android:textSize="35px" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="当前版本:  1.3" />
 

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    
    <ListView
            android:id="@+id/mycourse_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="#00000000"
            android:layout_marginBottom="110dp"
            android:layout_marginTop="70dp"
            
            android:listSelector="@android:color/transparent" />
    
    
     <RelativeLayout
        android:id="@+id/oder_nofound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:visibility="gone" 
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="69dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/front_empty" />

        <TextView
            android:id="@+id/logo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="暂无数据" />
    </RelativeLayout>
    
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_alignParentBottom="true"
            
            >
             
             <RelativeLayout
                        android:id="@+id/diziclick"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/white"
                        android:orientation="vertical" >
                        
                 
                        

                    
                    </RelativeLayout>

            

            <TextView
                android:id="@+id/ma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="28dp"
                android:textSize="23dp"
                android:text=" " />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView1"
                  android:textSize="23dp"
                android:textStyle="bold"
                android:text="村屯地址" />

            <TextView
                android:id="@+id/pingpai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:textSize="23dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="" />

       
           
           
        </RelativeLayout>

</RelativeLayout>